--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="style.css" type="text/css" rel="stylesheet">
-        <link rel="shortcut icon" href="assets/icon.png"/>
+        <link rel="shortcut icon" href="icon.png"/>
         <title>Tbilisi Bus Support</title>
     </head>
     
